2009-06-14 - Sean Huber (shuber@huberry.com)
  * Update Nestable interface logic
  * Update README
  * Add tree tests
  * Add basic set theory (uses all of the tree theory logic)
  * Add methods that need to be overwritten to set
  * Tree ensures parent exists in the nestable scope

2009-06-13 - Sean Huber (shuber@huberry.com)
  * Initial commit
  * Add Nestable::Tree logic
  * Rename :foreign_key option to :parent_column
  * Update test_helper
  * Add nestable tests
  * Rename validate_nestable_options to process_options!
  * Add Nestable::Interface
  * Use NotImplementedError instead of defining our own
  * Update README