@@ -5,6 +5,7 @@
   * Add basic set theory (uses all of the tree theory logic)
   * Add methods that need to be overwritten to set
   * Tree ensures parent exists in the nestable scope
+  * Refactor Tree included logic
 
 2009-06-13 - Sean Huber (shuber@huberry.com)
   * Initial commit
